--- a/index.html
+++ b/index.html
@@ -9,27 +9,60 @@
 <body>
     <header>
         <nav>
-            <a href="" class="botones">Inicio</a>
+            <a href="index.html" class="botones">Inicio</a>
         </nav>
         <nav>
             <a href="" class="botones">Nuestra carta</a>
         </nav>
         <nav>
-            <a href="" class="botones">¿Dónde estamos?</a>
+            <a href="index2.html" class="botones">Reservar</a>
+        </nav>
+        <nav>
+            <a href="https://maps.app.goo.gl/zYuXMBvnbAs6MSHg6" class="botones">¿Dónde estamos?</a>
         </nav>
         <div class="logo">
-            <a href="">
+            <a href="https://www.instagram.com/infinitapanaderia/?hl=es">
             <img src="imagenes/pngwing.com.png" alt="logo instagram">
         </a>
         </div>
     </header>
 
     <main>
+    <div>
      <h1>Infinita Panadería</h1>
      <h2>Sólo harina, agua y sal.</h2>
-     <p>Siempre de martes a sábados 8.30hs a 20hs</p>
-     <p>Domingos 8.30hs a 13.30hs</p>
+    </div>
+    <div class="horarios">
+     <p>Siempre de martes a sábados 8.30hs a 20hs.
+    </div>
+    <div class="horarios">
+        <p>Domingos 8.30hs a 13.30hs.</p>
+    </div>
+     
 </main>
+
+<footer>
+    <div>
+    <h1>Sobre nosotros</h1>
+    <p>Nuestra historia</p>
+    <p>Trabajá con nosotros</p>
+    <p>Novedades</p>
+</div>
+
+    <div>
+        <h1>Atención al cliente</h1>
+        <p>Contacto</p>
+        <p>Medios de pago</p>
+        <p>Defensa al consumidor</p>
+</div>
+
+    <div>
+        <h1>Expericia Infinita</h1>
+        <p>Instalaciones</p>
+        <p>Beneficios al cliente</p>
+        <p>Delivery</p>
+</div>
+</footer>
 
 </body>
 </html>
