commit final final

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
      <h1>Infinita Panadería</h1>
      <h2>Sólo harina, agua y sal.</h2>
     </div>
-    <div class="horarios">
+    <div>
      <p>Siempre de martes a sábados 8.30hs a 20hs.
     </div>
-    <div class="horarios">
+    <div>
         <p>Domingos 8.30hs a 13.30hs.</p>
     </div>
      
